added animation the button and a rolling globe animation

--- a/quotes.html
+++ b/quotes.html
@@ -19,6 +19,32 @@
     </div>
 
 
+    <div class="section-center">
+        <div class="section-path">
+          <div class="globe">
+            <div class="wrapper">
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
+        </div>
+       </div>
+
+
     <script src="quotes.js"></script>
 </body>
 </html>
